<package>
 <name>eigen_utils</name>
  <version>0.1.0</version>
  <description>
    ROS package for additional linear algebra calculations based on Eigen including skew symmetric matrix, projection matrix and orthogonal projection matrix.
  </description>
  <license>BSD</license>

  <url type="website">http://wiki.ros.org/eigen_utils</url>

  <author email="fevb@kth.se">Francisco Vina</author>
  <maintainer email="fevb@kth.se">Francisco Vina</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>eigen</build_depend>

  <run_depend>eigen</run_depend>
  
</package>